# cookredis

./: .gitignore  README.md  cookredis.spec
backend/: Cargo.toml
backend/config/: app.json
backend/src/: error.rs  main.rs
backend/src/models/: config.rs  mod.rs  redis.rs  request.rs  response.rs
backend/src/routes/: health.rs  mod.rs  process.rs  redis.rs
backend/src/services/: config_service.rs  mod.rs  process_service.rs  redis_service.rs
backend/src/utils/: msgpack.rs
cfg/: backup_db_cfg.json  cross_db_cfg.json  local_db_cfg.json  new_local_db_cfg.json  source_db_cfg.json
extension/: background.js  manifest.json  options.html  options.js  popup.html  popup.js  style.css
pipeline/work_cfg - 副本/: source_db_cfg.json
scripts/python/cfg/: del_tb.json
scripts/python/src/: cookredis.py  get_redis.py  pipeline.py  process.py  pyjson.py
scripts/python/temp/: 发送本地服配置到cfg.bat
scripts/python/test/: test_assert_db.py  test_delete.py
src/: .local_db.py.swp  CookRedis_up.py  backup_redis.py  cookredis.py  get_redis.py  gui.py  input_test_data.py  local_db.py  pipeline.py  process.py  pyjson.py  test.py  test_backup.py
temp/: 发送本地服配置到cfg.bat  源数据库模板.json
temp/local_cfg/: 本地服模板.json
test/: test_cross.py  test_cross_json.py  test_project.py
