[package]
name = "cook-redis"
version = "0.1.0"
edition = "2024"

[dependencies]

axum = "0.7"
tokio = { version = "1", features = ["full"] }

redis = { version = "1.0.4", features = ["tokio-comp"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

anyhow = "1"

thiserror = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

tower-http = { version = "0.5", features = ["cors"] }

regex = "1"
rmp-serde = "1.3"
base64 = "0.22"
